--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,67 +8,52 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
-
+:root {
+  --primary-color: #c40d0d;
+  --text-color: #2D2D2D;
+}
 body {
   font-family: 'Roboto';
-  color: #444;
+  color: var(--text-color);
   font-size: 16px;
   padding: 0px 15px;
+  background-color: #fff;
 }
 body .container {
   padding: 0;
 }
 a {
-  color: #4fa6d5;
+  color: var(--text-color);
+  font-size: 16px;
 }
 
 a:hover {
-  color: #45beff;
   text-decoration: none;
+  color: var(--text-color);
+}
+p {
+  -webkit-animation-delay: 0.4s;
+  animation-delay: 0.4s;
+  font-size: 16px;
+  line-height: 25px;
+  font-weight: 400;
 }
 
-h1, h2, h3, h4, h5, h6, .font-primary {
-  font-family: 'Roboto';
+h2 {
+  font-size: 22px;
+  font-weight: 700;
 }
-
-/*--------------------------------------------------------------
-# Back to top button
---------------------------------------------------------------*/
-.back-to-top {
-  position: fixed;
-  display: none;
-  width: 40px;
-  height: 40px;
-  border-radius: 3px;
-  right: 15px;
-  bottom: 15px;
-  background: #68A4C4;
-  color: #fff;
-  transition: display 0.5s ease-in-out;
-  z-index: 99999;
+.img-fluid {
+  border-radius: 10px !important;
 }
-
-.back-to-top i {
-  font-size: 24px;
-  position: absolute;
-  top: 8px;
-  left: 8px;
-}
-
-.back-to-top:hover {
-  color: #fff;
-  background: #000000;
-  transition: background 0.2s ease-in-out;
-}
-
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
 #header {
   height: 80px;
-  transition: all 0.5s;
+  transition: all 0.6s;
   z-index: 997;
-  transition: all 0.5s;
+  transition: all 0.6s;
   padding: 20px 0;
   background: #000000;
 }
@@ -78,15 +63,14 @@ h1, h2, h3, h4, h5, h6, .font-primary {
 }
 
 #header.header-scrolled {
-  background: #00000090;
-  height: 60px;
-  padding: 10px 0;
+  background: #000000;
+  height: 80px;
+  padding: 20px 0;
 }
 
 #header .logo img {
   padding: 0;
   margin: 0;
-  /* max-height: 40px; */
 }
 
 #main {
@@ -116,12 +100,10 @@ h1, h2, h3, h4, h5, h6, .font-primary {
   padding: 10px 15px;
   transition: 0.3s;
   font-size: 14px;
-  font-family: 'Roboto';
 }
 
 .nav-menu a:hover, .nav-menu .active > a, .nav-menu li:hover > a {
-  color: #a2cce3;
-  text-decoration: none;
+  color: var(--primary-color);
 }
 
 .nav-menu .drop-down ul {
@@ -154,11 +136,11 @@ h1, h2, h3, h4, h5, h6, .font-primary {
   font-size: 14px;
   font-weight: 500;
   text-transform: none;
-  color: #1c3745;
+  color: var(--primary-color);
 }
 
 .nav-menu .drop-down ul a:hover, .nav-menu .drop-down ul .active > a, .nav-menu .drop-down ul li:hover > a {
-  color: #68A4C4;
+  color: var(--primary-color);
 }
 
 .nav-menu .drop-down > a:after {
@@ -211,7 +193,7 @@ h1, h2, h3, h4, h5, h6, .font-primary {
   left: -260px;
   width: 260px;
   padding-top: 18px;
-  background: #1e4356;
+  background: #000;
   transition: 0.4s;
 }
 
@@ -224,14 +206,13 @@ h1, h2, h3, h4, h5, h6, .font-primary {
 .mobile-nav a {
   display: block;
   position: relative;
-  color: #ddecf5;
+  color: #fff;
   padding: 10px 20px;
   font-weight: 500;
 }
 
 .mobile-nav a:hover, .mobile-nav .active > a, .mobile-nav li:hover > a {
-  color: #a2cce3;
-  text-decoration: none;
+  color: var(--primary-color);
 }
 
 .mobile-nav .drop-down > a:after {
@@ -276,6 +257,8 @@ h1, h2, h3, h4, h5, h6, .font-primary {
 
 .mobile-nav-toggle i {
   color: #fff;
+  font-size: 45px;
+  margin-top: 5px;
 }
 
 .mobile-nav-overly {
@@ -285,7 +268,7 @@ h1, h2, h3, h4, h5, h6, .font-primary {
   top: 0;
   left: 0;
   position: fixed;
-  background: rgba(30, 67, 86, 0.9);
+  background: #00000040;
   overflow: hidden;
   display: none;
 }
@@ -301,19 +284,18 @@ h1, h2, h3, h4, h5, h6, .font-primary {
 .mobile-nav-active .mobile-nav-toggle i {
   color: #fff;
 }
-
-#footer .social-links a {
-  font-size: 22px;
-  color: #444444;
-  padding: 12px 10px;
+#footer .social-links a:first-child {
+  font-size: 30px;
+  padding: 10px;
   transition: 0.3s;
   vertical-align: middle;
 }
 
-#footer .social-links a:hover {
-  background: #68A4C4;
-  color: #fff;
-  text-decoration: none;
+#footer .social-links a {
+  font-size: 26px;
+  padding: 10px;
+  transition: 0.3s;
+  vertical-align: middle;
 }
 
 #footer .social-links {
@@ -339,16 +321,10 @@ h1, h2, h3, h4, h5, h6, .font-primary {
     padding:16px !important;
   }
   section {
-    padding: 15px 0;
+    padding: 20px 0;
   }
-}
-
-@media (max-width: 560px) {
-  .why-us .contact-container {
-    padding:16px !important;
-  }
-  section {
-    padding: 15px 0;
+  #header .logo img {
+    margin-left: 20px;
   }
 }
 
@@ -358,37 +334,14 @@ h1, h2, h3, h4, h5, h6, .font-primary {
 section {
   padding: 30px 0;
 }
-
-.section-bg {
-  background-color: #f3f8fa;
+@media (max-width: 768px) { 
+  section {
+    padding: 20px 0px;
+  }
 }
-
 .section-title {
   text-align: start;
   padding-bottom: 30px;
-}
-
-.section-title h2, .why-us .container h2, .experience .container h2, .portfolio-home h2 {
-  font-size: 20px;
-  font-weight: 550;
-  margin-bottom: 20px;
-  padding-bottom: 20px;
-  position: relative;
-  text-align: start;
-  font-style: normal;
-  letter-spacing: 2px;
-  text-transform: uppercase;
-}
-
-
-.section-title h2::after, .why-us .container h2::after, .experience .container h2::after, .portfolio-home h2::after{
-  content: '';
-  position: absolute;
-  display: block;
-  width: 40px;
-  height: 3px;
-  background: #68A4C4;
-  bottom: 0;
 }
 
 .section-title p {
@@ -397,183 +350,12 @@ section {
 .dummy-space {
   padding: 30px 0px;
 }
-
-/*--------------------------------------------------------------
-# Why Us
---------------------------------------------------------------*/
-.why-us .container {
-  box-shadow: 0 5px 25px 0 rgba(214, 215, 216, 0.6);
-  background: #fff;
-}
-
-.why-us .contact-container {
-  padding:40px;
-}
-
-.why-us .icon-box .icon {
-  float: left;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 65px;
-  height: 65px;
-  background: #f3f8fa;
-  border-radius: 6px;
-  transition: 0.5s;
-}
-
-.why-us .icon-box .icon i {
-  color: #68A4C4;
-  font-size: 32px;
-}
-
-.why-us .icon-box:hover .icon {
-  background: #68A4C4;
-}
-
-.why-us .icon-box:hover .icon i {
-  color: #fff;
-}
-
-.why-us .icon-box .title {
-  margin-left: 85px;
-  font-weight: 700;
-  margin-bottom: 10px;
-  font-size: 16px;
-  margin-top: 5px;
-  text-transform: uppercase;
-}
-
-.why-us .icon-box .title a {
-  color: #343a40;
-  transition: 0.3s;
-}
-
-.why-us .icon-box .title a:hover {
-  color: #68A4C4;
-}
-
-.why-us .icon-box .description {
-  margin-left: 85px;
-  line-height: 24px;
-  font-size: 14px;
-}
-
-.why-us .video-box {
-  position: relative;
-}
-
-.why-us .video-box img {
-  padding:15px;
-}
-
-.why-us .play-btn {
-  width: 94px;
-  height: 94px;
-  background: radial-gradient(#68A4C4 50%, rgba(104, 164, 196, 0.4) 52%);
-  border-radius: 50%;
-  display: block;
-  position: absolute;
-  left: calc(50% - 47px);
-  top: calc(50% - 47px);
-  overflow: hidden;
-}
-
-.why-us .play-btn::after {
-  content: '';
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translateX(-40%) translateY(-50%);
-  width: 0;
-  height: 0;
-  border-top: 10px solid transparent;
-  border-bottom: 10px solid transparent;
-  border-left: 15px solid #fff;
-  z-index: 100;
-  transition: all 400ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
-}
-
-.why-us .play-btn::before {
-  content: '';
-  position: absolute;
-  width: 120px;
-  height: 120px;
-  -webkit-animation-delay: 0s;
-  animation-delay: 0s;
-  -webkit-animation: pulsate-btn 2s;
-  animation: pulsate-btn 2s;
-  -webkit-animation-direction: forwards;
-  animation-direction: forwards;
-  -webkit-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
-  -webkit-animation-timing-function: steps;
-  animation-timing-function: steps;
-  opacity: 1;
-  border-radius: 50%;
-  border: 5px solid rgba(104, 164, 196, 0.7);
-  top: -15%;
-  left: -15%;
-  background: rgba(198, 16, 0, 0);
-}
-
-.why-us .play-btn:hover::after {
-  border-left: 15px solid #68A4C4;
-  transform: scale(20);
-}
-
-.why-us .play-btn:hover::before {
-  content: '';
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translateX(-40%) translateY(-50%);
-  width: 0;
-  height: 0;
-  border: none;
-  border-top: 10px solid transparent;
-  border-bottom: 10px solid transparent;
-  border-left: 15px solid #fff;
-  z-index: 200;
-  -webkit-animation: none;
-  animation: none;
-  border-radius: 0;
-}
-
-@-webkit-keyframes pulsate-btn {
-  0% {
-    transform: scale(0.6, 0.6);
-    opacity: 1;
-  }
-  100% {
-    transform: scale(1, 1);
-    opacity: 0;
-  }
-}
-
-@keyframes pulsate-btn {
-  0% {
-    transform: scale(0.6, 0.6);
-    opacity: 1;
-  }
-  100% {
-    transform: scale(1, 1);
-    opacity: 0;
-  }
-}
-
 /*--------------------------------------------------------------
 # Features
 --------------------------------------------------------------*/
 .features .row + .row {
   margin-top: 100px;
 }
-
-.features h3 {
-  font-weight: 400;
-  font-size: 24px;
-}
-
 .features ul {
   list-style: none;
   padding: 0;
@@ -586,7 +368,7 @@ section {
 .features ul i {
   font-size: 20px;
   padding-right: 4px;
-  color: #68A4C4;
+  color: var(--primary-color);
 }
 
 .features p:last-child {
@@ -596,14 +378,6 @@ section {
 /*--------------------------------------------------------------
 # About
 --------------------------------------------------------------*/
-.about h3 {
-  font-weight: 600;
-  font-size: 26px;
-}
-
-.about .img-fluid {
-  border-radius:20px;
-}
 .about ul {
   list-style: none;
   padding: 0;
@@ -616,7 +390,7 @@ section {
 .about ul i {
   font-size: 20px;
   padding-right: 4px;
-  color: #68A4C4;
+  color: var(--primary-color);
 }
 
 .about p:last-child {
@@ -624,20 +398,14 @@ section {
   line-height: 35px;
 }
 .experience .title {
-  font-size: 16px;
-  line-height: 14px;
-  color: #444;
   font-weight: 500;
+  margin-bottom: 0 !important;
 }
 .experience .degree {
-  font-size: 15px;
-  color: #444;
   margin: 0px !important;
 }
 .experience .description {
-  font-size: 15px;
   line-height: 26px;
-  color: #444;
 }
 /*--------------------------------------------------------------
 # Portfolio
@@ -661,28 +429,27 @@ section {
   font-size: 16px;
   font-weight: 500;
   line-height: 20px;
-  color: #444;
+  color: var(--text-color);
   transition: all 0.3s ease-in-out;
   border-bottom: 2px solid #fff;
-  font-family: 'Roboto';
 }
 
 .portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
-  border-color: #68A4C4;
-  color: #68A4C4;
+  border-color: var(--primary-color);
 }
 
 .portfolio .portfolio-item {
-  background: #1e4356;
+  background: #000;
   overflow: hidden;
   min-height: 200px;
   position: relative;
-  border-radius: 4px;
   margin: 0 0 30px 0;
+  border-radius: 10px;
 }
 
 .portfolio .portfolio-item img {
   transition: all 0.3s ease-in-out;
+  border-radius: 10px;
 }
 
 .portfolio .portfolio-item .portfolio-info {
@@ -695,17 +462,13 @@ section {
   right: 0;
 }
 
-.portfolio .portfolio-item .portfolio-info h3 {
-  font-size: 22px;
-}
-
-.portfolio .portfolio-item .portfolio-info h3 a {
+.portfolio .portfolio-item .portfolio-info h2 a {
   color: #fff;
 }
 
 .portfolio .portfolio-item .portfolio-info a i {
-  color: rgba(0, 0, 0, 0.2);
-  font-size: 28px;
+  color: #00000020;
+  font-size: 25px;
   transition: 0.3s;
 }
 
@@ -716,118 +479,16 @@ section {
 .portfolio .portfolio-item:hover img {
   opacity: 0.8;
   transform: scale(1.1);
+  border-radius: 10px !important;
 }
 
 .portfolio .portfolio-item:hover .portfolio-info {
   opacity: 1;
   top: calc(50%);
 }
-
-/*--------------------------------------------------------------
-# Portfolio Details
---------------------------------------------------------------*/
-.portfolio-details {
-  padding-top: 40px;
-}
-
-.portfolio-details .portfolio-details-container {
-  position: relative;
-}
-
-.portfolio-details .portfolio-details-carousel {
-  position: relative;
-  z-index: 1;
-}
-
-.portfolio-details .portfolio-details-carousel .owl-nav, .portfolio-details .portfolio-details-carousel .owl-dots {
-  margin-top: 5px;
-  text-align: left;
-}
-
-.portfolio-details .portfolio-details-carousel .owl-dot {
-  display: inline-block;
-  margin: 0 10px 0 0;
-  width: 12px;
-  height: 12px;
-  border-radius: 50%;
-  background-color: #ddd !important;
-}
-
-.portfolio-details .portfolio-details-carousel .owl-dot.active {
-  background-color: #68A4C4 !important;
-}
-
-.portfolio-details .portfolio-info {
-  padding: 30px;
-  position: absolute;
-  right: 0;
-  bottom: -70px;
-  background: #fff;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-  z-index: 2;
-}
-
-.portfolio-details .portfolio-info h3 {
-  font-size: 22px;
-  font-weight: 700;
-  margin-bottom: 20px;
-  padding-bottom: 20px;
-  border-bottom: 1px solid #eee;
-}
-
-.portfolio-details .portfolio-info ul {
-  list-style: none;
-  padding: 0;
-  font-size: 15px;
-}
-
-.portfolio-details .portfolio-info ul li + li {
-  margin-top: 10px;
-}
-
-.portfolio-details .portfolio-description {
-  padding-top: 50px;
-}
-
-.portfolio-details .portfolio-description h2 {
-  width: 50%;
-  font-size: 26px;
-  font-weight: 700;
-  margin-bottom: 20px;
-}
-
-.portfolio-details .portfolio-description p {
-  padding: 0 0 0 0;
-}
-
-@media (max-width: 768px) {
-  .portfolio-details .portfolio-description h2 {
-    width: 100%;
-  }
-  .portfolio-details .portfolio-info {
-    position: static;
-    margin-top: 30px;
-  }
-}
-
 /*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
-#footer {
-  color: #444444;
-  font-size: 14px;
-  background-color: #ffffff;
-}
-
-#footer .container::before {
-  content: '';
-  display: block;
-  width: 100%;
-  height: 1px;
-  background: #44444470;
-  margin-bottom: 30px; 
-}
-
 #footer .copyright {
   padding-bottom: 30px;
   font-size: 16px;
@@ -841,71 +502,15 @@ section {
   overflow: visible;
   position: relative;
   padding-top: 50px;
+  height: 60vh;
 }
-
-#hero::after {
-  content: '';
-  position: absolute;
-  display: block;
-  width: 100%;
-  height: 1px;
-  background: #44444450;
-  bottom: -60px;
-}
-
-#hero .social-links a {
-  font-size: 24px;
-  display: inline-block;
-  color: #444444;
-  line-height: 1;
-  padding: 8px 8px;
-  margin-right: 8px;
-  text-align: center;
-  width: 40px;
-  height: 40px;
-  transition: 0.3s;
-  vertical-align: middle;
-}
-
-#hero .social-links a:first-child {
-  padding: 8px 0px;
-  margin-right: 8px;
-  text-align: start;
-  vertical-align: middle;
-}
-
-#hero .social-links a:hover {
-  background: #68A4C4;
-  color: #fff;
-  text-decoration: none;
-}
-
 
 #hero h2 {
-  color: #444444;
-  font-size: 45px;
-  font-weight: 700;
-  top:50%;
-  font-family: 'Roboto';
-}
-
-#hero p {
-  width: 100%;
-  -webkit-animation-delay: 0.4s;
-  animation-delay: 0.4s;
-  color: #444444;
-  font-size: 18px;
-  line-height: 35px;
-  font-weight: 400;
-}
-
-#hero .designation{
   font-size: 25px;
-  color: #444444;
-  font-weight: 650;
-  padding: 5px 0;
-  white-space: nowrap;
-  overflow: hidden;
+  font-weight: 700;
+}
+#hero p {
+  line-height: 35px;
 }
 
 #hero img {
@@ -929,155 +534,89 @@ section {
   }
 }
 
-@media (max-width: 560px) {
-  #hero h2 {
-    font-size: 30px;
-  }
-}
-
 /*--------------------------------------------------------------
 # portfolio-home Section
 --------------------------------------------------------------*/
 
 .portfolio-home .portfolio-item {
-  background: #1e4356;
+  background: #000;
   overflow: hidden;
   min-height: 200px;
   position: relative;
-  border-radius: 4px;
   margin: 0 0 30px 0;
+  border-radius: 10px;
 }
 
 .portfolio-home .portfolio-item:hover img {
   opacity: 0.8;
   transform: scale(1.1);
   transition: 0.3s ease-in-out;
+  border-radius: 10px !important;
 }
 
 .portfolio-home .time p {
   font-size: 16px;
-  color: #444444;
-  font-weight:100;
+  margin-bottom: 0px;
 }
 
 .portfolio-home .portfolio-description {
   padding-top: 10px;
-  color: #444444;
 }
-
-.portfolio-home .portfolio-description::after {
-  content: '';
-  position: static;
-  display: block;
-  width: 100%;
-  height: 1px;
-  background: #44444450;
-  margin-bottom: 10px;
-  margin-top: 40px;
-}
-
-.portfolio-home .portfolio-description h3 {
-  font-size: 20px;
-  font-weight: 600;
-  margin-bottom: 20px;
-  list-style: 16px;
-  color: #444444;
-}
-
-.portfolio-home .portfolio-description p {
-  padding: 10px 0 0 0;
-}
-
-
 /*--------------------------------------------------------------
-# more projects Section
+# Why Us
 --------------------------------------------------------------*/
+.why-us .container {
+  box-shadow: 0 5px 25px 0 rgba(214, 215, 216, 0.6);
+}
 
-#more-projects a {
-  font-size: 18px;
-  line-height: 20px;
-  text-align: center;
+.why-us .contact-container {
+  padding:40px;
+}
+
+.why-us .icon-box .icon {
+  float: left;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 65px;
+  height: 65px;
+  background: #c40d0d10;
+  border-radius: 6px;
+  transition: 0.5s;
+}
+
+.why-us .icon-box .icon i {
+  color: var(--primary-color);
+  font-size: 32px;
+}
+
+.why-us .icon-box:hover .icon {
+  background: var(--primary-color);
+}
+
+.why-us .icon-box:hover .icon i {
+  color: #fff;
+}
+
+.why-us .icon-box .title {
+  margin-left: 85px;
+  font-weight: 700;
+  font-size: 16px;
+  margin-top: 5px;
+  text-transform: uppercase;
+}
+
+.why-us .icon-box .title a {
+  color: var(--primary-color);
   transition: 0.3s;
 }
 
-#more-projects a:hover {
-  text-decoration: wavy;
-  transition: 0.3s ease-in-out;
-  color: #1e4356;
+.why-us .icon-box .title a:hover {
+  color: var(--primary-color);
 }
 
-/*--------------------------------------------------------------
-# project-details Section
---------------------------------------------------------------*/
-@media (max-width: 768px) {
-  #challenge .container {
-    padding: 20px;
-    background: #44444415;
-  }
-}
-#challenge .container {
-  padding: 40px;
-  background: #44444415;
-}
-#challenge .description {
-  font-size: 22px;
+.why-us .icon-box .description {
+  margin-left: 85px;
   line-height: 24px;
-  color: #265359;
-}
-#challenge p, #solution p, #painpoints p, #goals p, #design-samples p, #research p, #objectives p {
-  font-size: 28px;
-  color: #000000;
-  text-transform: capitalize;
-  font-weight: 700;
-}
-
-#challenge p:hover, #solution p:hover, #painpoints p:hover, #goals p:hover, #design-samples p:hover, #research p:hover, #objectives p:hover {
-  cursor: context-menu;
-}
-
-#challenge p i, #solution p i, #painpoints p i, #research p i {
-  font-size: 30px;
-  color: #1e4356;
-  vertical-align: middle;
-}
-
-#solution i, #painpoints i, #research i {
-  font-size: 18px;
-  color: #444444;
-  line-height: 24px;
-  vertical-align: text-bottom;
-}
-#painpoints span, #research span, #goals span {
-  font-size: 16px;
-  color: #444444;
-  line-height: 25px;
-  margin-top: 10px;
-  display: block !important;
-}
-
-#goals ol li{
-  font-size: 16px;
-  color: #444444;
-  line-height: 25px;
-  margin-top: 10px;
-}
-
-#design-samples img {
-  border: 0.5px solid #44444450;
-}
-
-#design-samples .heading {
-  padding: 10px 0px;
-}
-
-#design-samples .heading span {
-  font-size: 20px;
-  color: #265359;
-  font-weight: bold;
-}
-#thank-you span {
-  font-size: 30px;
-  color: #265359;
-  font-weight: bold;
-  font-family: 'Courier New', Courier, monospace;
+  font-size: 14px;
 }
