--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -397,6 +397,9 @@ section {
   margin-bottom: 0;
   line-height: 35px;
 }
+.about img {
+ border-radius: 10px;
+}
 .experience .title {
   font-weight: 500;
   margin-bottom: 0 !important;
@@ -512,12 +515,6 @@ section {
 #hero p {
   line-height: 35px;
 }
-
-#hero img {
-  padding: 10px;
-  /* border: 3px solid rgba(66, 150, 199, 0.651); */
-}
-
 
 @media (min-width: 1024px) {
   #hero p {
