--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,6 @@ body .container {
 }
 a {
   color: var(--text-color);
-  font-size: 16px;
 }
 
 a:hover {
@@ -34,7 +33,6 @@ a:hover {
 p {
   -webkit-animation-delay: 0.4s;
   animation-delay: 0.4s;
-  font-size: 16px;
   line-height: 25px;
   font-weight: 400;
 }
@@ -397,7 +395,7 @@ section {
   margin-bottom: 0;
   line-height: 35px;
 }
-.about img {
+#about img {
  border-radius: 10px;
 }
 .experience .title {
@@ -410,6 +408,16 @@ section {
 .experience .description {
   line-height: 26px;
 }
+
+@media (max-width: 768px) {
+  #about h2 {
+    margin-top: 20px;
+  }
+  #about img {
+    margin-top: 40px;
+  }
+}
+
 /*--------------------------------------------------------------
 # Portfolio
 --------------------------------------------------------------*/
@@ -429,7 +437,6 @@ section {
   margin: 0 12px 5px 12px;
   display: inline-block;
   padding: 0 4px 6px 4px;
-  font-size: 16px;
   font-weight: 500;
   line-height: 20px;
   color: var(--text-color);
@@ -494,9 +501,12 @@ section {
 --------------------------------------------------------------*/
 #footer .copyright {
   padding-bottom: 30px;
-  font-size: 16px;
 }
-
+@media (max-width: 768px) {
+  #footer .copyright {
+    padding-bottom: 10px;
+  }
+}
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
@@ -515,19 +525,23 @@ section {
 #hero p {
   line-height: 35px;
 }
-
+#hero .text-container {
+  margin-top: 100px;
+}
 @media (min-width: 1024px) {
   #hero p {
     width: 100%;
     /* height:50vh; */
   }
-
 }
 
 @media (max-width: 768px) {
   #hero {
     width: 100%;
-    padding-top: 120px;
+    padding-top: 60px;
+  }
+  #hero .text-container {
+    margin-top: 20px;
   }
 }
 
@@ -552,7 +566,6 @@ section {
 }
 
 .portfolio-home .time p {
-  font-size: 16px;
   margin-bottom: 0px;
 }
 
@@ -598,7 +611,6 @@ section {
 .why-us .icon-box .title {
   margin-left: 85px;
   font-weight: 700;
-  font-size: 16px;
   margin-top: 5px;
   text-transform: uppercase;
 }
@@ -615,5 +627,4 @@ section {
 .why-us .icon-box .description {
   margin-left: 85px;
   line-height: 24px;
-  font-size: 14px;
 }
