--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ p {
 }
 
 h2 {
-  font-size: 22px;
+  font-size: 20px;
   font-weight: 700;
 }
 .img-fluid {
@@ -255,7 +255,7 @@ h2 {
 
 .mobile-nav-toggle i {
   color: #fff;
-  font-size: 45px;
+  font-size: 35px;
   margin-top: 5px;
 }
 
@@ -302,7 +302,7 @@ h2 {
 
 
 @media (min-width: 1024px) {
-  .why-us .contact-container {
+  #why-us .contact-container {
     padding:40px !important;
   }
 }
@@ -315,7 +315,7 @@ h2 {
     padding: 0px !important;
     display: none !important;
   }
-  .why-us .contact-container {
+  #why-us .contact-container {
     padding:16px !important;
   }
   section {
@@ -420,11 +420,7 @@ section {
 
 /*--------------------------------------------------------------
 # Portfolio
---------------------------------------------------------------*/
-.portfolio {
-  padding-bottom: 60px;
-}
-
+--------------------------------------------------------------*/  
 .portfolio #portfolio-flters {
   padding: 0;
   margin: 0 0 35px 0;
@@ -525,9 +521,6 @@ section {
 #hero p {
   line-height: 35px;
 }
-#hero .text-container {
-  margin-top: 100px;
-}
 @media (min-width: 1024px) {
   #hero p {
     width: 100%;
@@ -539,9 +532,6 @@ section {
   #hero {
     width: 100%;
     padding-top: 60px;
-  }
-  #hero .text-container {
-    margin-top: 20px;
   }
 }
 
@@ -575,15 +565,17 @@ section {
 /*--------------------------------------------------------------
 # Why Us
 --------------------------------------------------------------*/
-.why-us .container {
+#why-us .container {
   box-shadow: 0 5px 25px 0 rgba(214, 215, 216, 0.6);
 }
-
-.why-us .contact-container {
+#why-us h2 {
+  font-size: 18px;
+}
+#why-us .contact-container {
   padding:40px;
 }
 
-.why-us .icon-box .icon {
+#why-us .icon-box .icon {
   float: left;
   display: flex;
   align-items: center;
@@ -595,36 +587,36 @@ section {
   transition: 0.5s;
 }
 
-.why-us .icon-box .icon i {
+#why-us .icon-box .icon i {
   color: var(--primary-color);
   font-size: 32px;
 }
 
-.why-us .icon-box:hover .icon {
+#why-us .icon-box:hover .icon {
   background: var(--primary-color);
 }
 
-.why-us .icon-box:hover .icon i {
+#why-us .icon-box:hover .icon i {
   color: #fff;
 }
 
-.why-us .icon-box .title {
+#why-us .icon-box .title {
   margin-left: 85px;
   font-weight: 700;
   margin-top: 5px;
   text-transform: uppercase;
 }
 
-.why-us .icon-box .title a {
+#why-us .icon-box .title a {
   color: var(--primary-color);
   transition: 0.3s;
 }
 
-.why-us .icon-box .title a:hover {
+#why-us .icon-box .title a:hover {
   color: var(--primary-color);
 }
 
-.why-us .icon-box .description {
+#why-us .icon-box .description {
   margin-left: 85px;
   line-height: 24px;
 }
